--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stone-Scissor-Paper</title>
+    <title>rock-Scissor-Paper</title>
+    <script type="javascript" src="main.js"></script>
 </head>
 <body>
 <button>Schere</button>
+<img src="bilder/schere.jpg" alt="" height="200px" width="200px">
 <button>Stein</button>
+<img src="bilder/stein.jpg" alt="" height="200px" width="200px">
 <button>Papier</button>
-<button>Papier</button>
+<img src="bilder/papier.jpg" alt="" height="200px" width="200px">
 </body>
 </html>
