--- a/index.html
+++ b/index.html
@@ -1,56 +1,22 @@
-<!DOCTYPE html>
-<html lang="de">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Währungsrechner</title>
-    <script src="main.js"></script>
+<title>Währungsrechner</title>
+<script language="javascript" type="text/javascript" src="main.js">
+//--></script>
 </head>
 <body>
-    <h1>Currency Converter</h1>
-    <p> Select Currency and enter Amount to convert.</p>
-    <form>
-       <label>Von:</label>
-       <select id="from">
-          <option value="USD">USD</option>
-          <option value="EUR">EUR</option>
-          <option value="GBP">GBP</option>
-          <option value="INR">INR</option>
-       </select>
-       <label>Zu:</label>
-       <select id="to">
-          <option value="USD">USD</option>
-          <option value="EUR">EUR</option>
-          <option value="GBP">GBP</option>
-          <option value="INR">INR</option>
-       </select>
-       <label>Wert:</label>
-       <input type="text" id="amount" />
-       <button type="button" id="convert">Convert</button>
-       <p id="result"></p>
-    </form>
-    <script>
-       const convert = document.getElementById("convert");
-       const result = document.getElementById("result");
-       const from = document.getElementById("from");
-       const to = document.getElementById("to");
-       const amount = document.getElementById("amount");
-       convert.addEventListener("click", function() {
-          let fromCurrency = from.value;
-          let toCurrency = to.value;
-          let amt = amount.value;
-          fetch(`https://api.exchangerate-api.com/v4/latest/${fromCurrency}`)
-          .then(response => {
-                return response.json();
-          })
-          .then(data => {
-             let rate = data.rates[toCurrency];
-             let total = rate * amt;
-             result.innerHTML = `${amt} ${fromCurrency} = ${total}
-             ${toCurrency}`;
-          });
-       });
-    </script>
+<form>
+<input type="text" name="betrag" />
+<select name="Waehrung">
+   <option>DM</option>
+   <option>Franc</option>
+   <option>Lira</option>
+</select>
+<br>
+<input type="radio" name="umrechnung" value="nachEUR" checked="checked" /> nach Euro | 
+<input type="radio" name="umrechnung" value="vonEUR" /> von Euro<br />
+<input type="button" value="Umrechnen!" onclick="umrechnen(this.form)" /> 
+<input type="text" name="ausgabe" />
+</form>
 </body>
 </html>
