--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@
 <input type="button" value="Umrechnen!" onclick="umrechnen(this.form)" /> 
 <input type="text" name="ausgabe" />
 </form>
-</body>suii
+</body>
 </html>
