--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
                             <select id="box" name="Waehrung">
                             </select>
                         <div>
-                            <div id="bottum" >
-                                <input type="button" value="Umrechnen nach CHF!" onclick="berechnen('nachCHF')" />
-                                <input type="button" value="Umrechnen von CHF!" onclick="berechnen('vonCHF')" />
-                            </div>
+                            <input id="bottum" type="button" value="Umrechnen nach CHF!" onclick="berechnen('nachCHF')" />
+                            <input id="bottum" type="button" value="Umrechnen von CHF!" onclick="berechnen('vonCHF')" />
                                 <h2>Ergebnis</h2>
                             <input type="text" id="ausgabe" name="ausgabe" />
                         </div>
