--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <body>
         <div id="ganzganz">
             <div id="ganz">
-                    <script language="javascript" type="text/javascript" src="main.js"></script>
-                    <h3>Bitte wählen Sie die Datei "Daten.JSON" aus, damit die Umrechnung erfolgreich verlaufen kann!</h3>
+                <script language="javascript" type="text/javascript" src="main.js"></script>
+                    <h2>Bitte waehlen Sie die Datei "Daten.JSON" aus, damit die Umrechnung erfolgreich verlaufen kann!</h2>
                 <form>
                     <h2>Anzahl eingeben</h2>
                     <input type="text" id="betrag" name="betrag" />
